--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -1,10 +1,3 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-/* nav bar */
 .navbar nav {
   width: 100%;
   background: rgb(24, 23, 23);
@@ -14,6 +7,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 1rem 1.2rem;
+  z-index: 1;
 }
 
 .navbar nav .logo {
@@ -29,18 +23,16 @@
   display: none;
 }
 
-.navbar nav .navigation button {
-  /* text-decoration: none; */
-  font-size: 1.05rem;
+.navbar nav .navigation .nav-link {
+  text-decoration: none;
+  font-size: 1.15rem;
   color: #e2e1e1;
   padding: 0.5rem;
   cursor: default;
-  background: none;
-  border: none;
 }
 
-.navbar nav .navigation button:hover {
-  background-color: rgb(80, 79, 79);
+.navbar nav .navigation .nav-link:hover {
+  background-color: rgba(97, 130, 223, 0.226);
   border-radius: 8px;
 }
 
