--- a/src/styles/AddPlayerForm.css
+++ b/src/styles/AddPlayerForm.css
@@ -1,11 +1,15 @@
-body {
+.page {
   background: url(../assets/images/loginBackground.webp);
   background-repeat: no-repeat;
   background-size: cover;
+  height: 100%;
 }
 
 .form {
   position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   height: 250px;
   width: 400px;
   background: rgba(235, 225, 225, 0.1);
@@ -13,9 +17,6 @@ body {
   border: 2px solid rgba(72, 91, 202, 0.2);
   box-shadow: 0 0 15px rgba(79, 93, 214, 0.8);
   border-radius: 8px;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
   padding: 1rem;
   animation: fadeZoomIn 0.6s ease-out forwards;
 }
@@ -37,7 +38,8 @@ body {
 .form select {
   margin: 1rem;
   height: 30px;
-  width: 150px;
+  /* width: 150px; */
+  width: 40%;
   background-color: #1c1f2a;
   color: #ffffff;
   border: 1px solid rgba(53, 145, 231, 0.5);
@@ -87,5 +89,25 @@ body {
   100% {
     opacity: 1;
     transform: scale(1) translate(inherit);
+  }
+}
+
+@media (max-width: 768px) {
+  .form {
+    width: 85%;
+  }
+
+  .form select {
+    margin: 1rem;
+    height: 30px;
+    width: 35%;
+    background-color: #1c1f2a;
+    color: #ffffff;
+    border: 1px solid rgba(53, 145, 231, 0.5);
+    border-radius: 20px;
+    padding: 0 5px;
+    font-size: 1rem;
+    box-shadow: 0 0 8px #00cfff44;
+    outline: none;
   }
 }
