--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -1,13 +1,22 @@
+.navbar {
+  width: 100%;
+}
+
 .navbar nav {
   width: 100%;
   background: rgb(24, 23, 23);
   color: #e2e1e1;
-  position: fixed;
+  position: relative;
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 1rem 1.2rem;
-  z-index: 1;
+  /* z-index: 1; */
+}
+
+.homepage-link {
+  text-decoration: none;
+  color: #e2e1e1;
 }
 
 .navbar nav .logo {
@@ -37,25 +46,30 @@
 }
 
 @media (max-width: 768px) {
-  .navbar nav label{
+  .navbar {
+    width: 100%;
+    position: relative;
+  }
+  
+  .navbar nav label {
+    font-size: 1.25rem;
     display: block;
   }
   .navbar nav .navigation {
     display: none;
   }
   #hamburger:checked ~ .navigation {
-    display: block;
+    display: flex;
     position: absolute;
     top: 100%;
     background: rgba(22, 22, 22, 0.973);
     width: 100%;
     left: 0;
-    display: flex;
     justify-content: center;
     align-items: center;
     text-align: center;
     gap: 1.5rem;
     flex: 1;
-    padding: 0.5rem 0.1rem;
+    padding: 0.3rem 0.1rem;
   }
 }
