--- a/src/styles/AddPlayerForm.css
+++ b/src/styles/AddPlayerForm.css
@@ -1,8 +1,13 @@
+body{
+  overflow-x: hidden;
+}
+
 .page {
   background: url(../assets/images/loginBackground.webp);
   background-repeat: no-repeat;
   background-size: cover;
   height: 100%;
+  width: 100%;
 }
 
 .form {
@@ -38,7 +43,6 @@
 .form select {
   margin: 1rem;
   height: 30px;
-  /* width: 150px; */
   width: 40%;
   background-color: #1c1f2a;
   color: #ffffff;
@@ -56,7 +60,7 @@
   left: 50%;
   transform: translate(-50%, 25%);
   width: 200px;
-  height: 35px;
+  height: 40px;
   margin: 2rem 0;
   background: linear-gradient(to right, #00f7ff, #00cfff);
   color: #000;
@@ -84,7 +88,8 @@
 @keyframes fadeZoomIn {
   0% {
     opacity: 0;
-    transform: scale(0.8) translate(0, 0);
+    left: 0;
+    transform: scale(0.8);
   }
   100% {
     opacity: 1;
@@ -98,9 +103,9 @@
   }
 
   .form select {
-    margin: 1rem;
-    height: 30px;
-    width: 35%;
+    margin: 1rem 0.4rem;
+    height: 45px;
+    width: 45%;
     background-color: #1c1f2a;
     color: #ffffff;
     border: 1px solid rgba(53, 145, 231, 0.5);
