--- a/src/styles/Hero.css
+++ b/src/styles/Hero.css
@@ -48,6 +48,7 @@
   border-radius: 8px;
   text-decoration: none;
   animation: pulse 2s infinite;
+  margin: 1rem 0;
 }
 
 .hero .left .link:hover {
@@ -63,12 +64,11 @@
   position: absolute;
   top: 50%;
   left: 90%;
-  animation: fadeIn 1s ease-out, float 5s infinite ease-in-out;
-  /* animation: ; */
+  animation: heoFadeIn 1s ease-out, heroFloat 5s infinite ease-in-out;
   border-radius: 5px;
 }
 
-@keyframes float {
+@keyframes heroFloat {
   0% {
     transform: translateY(0);
   }
@@ -80,7 +80,7 @@
   }
 }
 
-@keyframes fadeIn {
+@keyframes heroFadeIn {
   from {
     opacity: 0;
     transform: scale(0.8) translateY(20px);
